Mongo-Express/mongoEXP-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-exp-clusterip
spec:
  selector:
    app: mongo-express
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
