Mongo-Express/mongoEXP-loadbalabcer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-lb
  namespace: default
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
