Mongo-Express/mongoEXP-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-nodeport
  namespace: default
spec:
  selector:
    app: mongo-express
  type: NodePort
  ports:
  - port: 8081           # Cluster IP port
    targetPort: 8081     # Container port
    nodePort: 30081      # Exposed port on the node (must be between 30000-32767)
