Mongo-Express/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mongo-express.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mmongo-exp-clusterip
            port:
              number: 8081
